--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "cross-env NODE_ENV=test mocha-webpack --webpack-config webpack.config.js --require ./test/setup.js test/**/*.spec.js"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -19,7 +20,21 @@
     "@vue/cli-plugin-babel": "^3.0.3",
     "@vue/cli-plugin-eslint": "^3.0.3",
     "@vue/cli-service": "^3.0.3",
-    "vue-template-compiler": "^2.5.17"
+    "@vue/test-utils": "^1.0.0-beta.25",
+    "babel-plugin-istanbul": "^5.0.1",
+    "cross-env": "^5.2.0",
+    "expect": "^23.6.0",
+    "ignore-styles": "^5.0.1",
+    "jsdom": "^12.0.0",
+    "jsdom-global": "^3.0.2",
+    "mocha": "^5.2.0",
+    "mocha-webpack": "^2.0.0-beta.0",
+    "null-loader": "^0.1.1",
+    "sinon": "^6.3.4",
+    "vue-loader": "^15.4.2",
+    "vue-template-compiler": "^2.5.17",
+    "vue-test-utils": "^1.0.0-beta.11",
+    "webpack-node-externals": "^1.7.2"
   },
   "eslintConfig": {
     "root": true,
